--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,5 @@
 {% extends "layout.html" %} <!-- Inherits the basic layout from layout.html -->
 {% block content %}
-    <h2>{{ subtitle }}</h2>
-    <br>
-    <p>{{ text }}</p>
 
 <!DOCTYPE html>
 
@@ -122,17 +119,17 @@
 
 
                 if(id == 800){
-                    wIcon.src = "icons/clear.svg";
+                    wIcon.src = "https://github.com/paolacalle/weatherapp/assets/98432607/f5980f75-20b4-4302-a042-af674f7b3313";
                 }else if(id >= 200 && id <= 232){
-                    wIcon.src = "icons/storm.svg";  
+                    wIcon.src = "https://github.com/paolacalle/weatherapp/assets/98432607/c5393283-c50c-44e8-b29b-afdb5b8632ad";  
                 }else if(id >= 600 && id <= 622){
-                    wIcon.src = "icons/snow.svg";
+                    wIcon.src = "https://github.com/paolacalle/weatherapp/assets/98432607/334fbf9b-94cd-4312-9de5-2bdda79bad36";
                 }else if(id >= 701 && id <= 781){
-                    wIcon.src = "icons/haze.svg";
+                    wIcon.src = "https://github.com/paolacalle/weatherapp/assets/98432607/f954321e-5f83-41a3-9f99-4e6a559298de";
                 }else if(id >= 801 && id <= 804){
-                    wIcon.src = "icons/cloud.svg";
+                    wIcon.src = "https://github.com/paolacalle/weatherapp/assets/98432607/08da106b-a4bf-4068-a2b3-65c5bcd2eb32";
                 }else if((id >= 500 && id <= 531) || (id >= 300 && id <= 321)){
-                    wIcon.src = "icons/rain.svg";
+                    wIcon.src = "https://github.com/paolacalle/weatherapp/assets/98432607/c7f94464-dca3-4a26-b60a-910928f40bf2";
                 }
                 
                 if (temp >= 140) {
