--- a/static/weather.css
+++ b/static/weather.css
@@ -1,197 +1,243 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-*{
+
+h1 {
+  color: #FFFFFF;
+  font-size: 32px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-body{
+
+body {
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: #43AFFC;
+  background: linear-gradient(to bottom, #007bff, #43affc);
 }
-::selection{
+
+::selection {
   color: #fff;
-  background: #43AFFC;
+  background: #43affc;
 }
-.wrapper{
+
+.wrapper {
   width: 400px;
   background: #fff;
-  border-radius: 7px;
-  box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+  padding: 2rem;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
-.wrapper header{
+
+.wrapper header {
   display: flex;
-  font-size: 21px;
+  font-size: 2rem;
   font-weight: 500;
-  color: #43AFFC;
-  padding: 16px 15px;
+  color: #43affc;
+  padding: 1rem;
   align-items: center;
   border-bottom: 1px solid #ccc;
 }
-header i{
-  font-size: 0em;
+
+header i {
+  font-size: 1.5rem;
   cursor: pointer;
-  margin-right: 8px;
+  margin-right: 0.5rem;
 }
-.wrapper.active header i{
-  margin-left: 5px;
-  font-size: 30px;
+
+.wrapper.active header i {
+  margin-left: 0.5rem;
+  font-size: 2.5rem;
 }
-.wrapper .input-part{
-  margin: 20px 25px 30px;
+
+.wrapper .input-part {
+  margin: 2rem 0;
 }
-.wrapper.active .input-part{
+
+.wrapper.active .input-part {
   display: none;
 }
-.input-part .info-txt{
+
+.input-part .info-txt {
   display: none;
-  font-size: 17px;
+  font-size: 1.2rem;
   text-align: center;
-  padding: 12px 10px;
+  padding: 0.75rem 1rem;
   border-radius: 7px;
-  margin-bottom: 15px;
+  margin-bottom: 1.5rem;
 }
-.input-part .info-txt.error{
+
+.input-part .info-txt.error {
   color: #721c24;
   display: block;
   background: #f8d7da;
   border: 1px solid #f5c6cb;
 }
-.input-part .info-txt.pending{
+
+.input-part .info-txt.pending {
   color: #0c5460;
   display: block;
   background: #d1ecf1;
   border: 1px solid #bee5eb;
 }
-.input-part :where(input, button){
+
+.input-part :where(input, button) {
   width: 100%;
   height: 55px;
   border: none;
   outline: none;
-  font-size: 18px;
+  font-size: 1rem;
   border-radius: 7px;
 }
-.input-part input{
+
+.input-part input {
   text-align: center;
-  padding: 0 15px;
+  padding: 0 1rem;
   border: 1px solid #ccc;
 }
-.input-part input:is(:focus, :valid){
-  border: 2px solid #43AFFC;
+
+.input-part input:is(:focus, :valid) {
+  border: 2px solid #43affc;
 }
-.input-part input::placeholder{
+
+.input-part input::placeholder {
   color: #bfbfbf;
 }
-.input-part .separator{
+
+.input-part .separator {
   height: 1px;
   width: 100%;
-  margin: 25px 0;
+  margin: 1.5rem 0;
   background: #ccc;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.separator::before{
+
+.separator::before {
   content: "or";
   color: #b3b3b3;
-  font-size: 19px;
-  padding: 0 15px;
+  font-size: 1rem;
+  padding: 0 1rem;
   background: #fff;
 }
-.input-part button{
+
+.input-part button {
   color: #fff;
   cursor: pointer;
-  background: #43AFFC;
+  background: #43affc;
   transition: 0.3s ease;
 }
-.input-part button:hover{
+
+.input-part button:hover {
   background: #1d9ffc;
 }
 
-.wrapper .weather-part{
+.wrapper .weather-part {
   display: none;
-  margin: 30px 0 0;
+  margin-top: 2rem;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
-.wrapper.active .weather-part{
+
+.wrapper.active .weather-part {
   display: flex;
 }
-.weather-part img{
+
+.weather-part img {
   max-width: 125px;
 }
-.weather-part .temp{
+
+.weather-part .temp {
   display: flex;
   font-weight: 500;
-  font-size: 72px;
+  font-size: 2.5rem;
 }
-.weather-part .temp .numb{
+
+.weather-part .temp .numb {
   font-weight: 600;
 }
-.weather-part .temp .deg{
-  font-size: 40px;
+
+.weather-part .temp .deg {
+  font-size: 1.5rem;
   display: block;
   margin: 10px 5px 0 0;
 }
-.weather-part .weather{
-  font-size: 21px;
+
+.weather-part .weather {
+  font-size: 1.5rem;
   text-align: center;
-  margin: -5px 20px 15px;
+  margin: -5px 2rem 1.5rem;
 }
-.weather-part .location{
+
+.weather-part .location {
   display: flex;
-  font-size: 19px;
-  padding: 0 20px;
+  font-size: 1.2rem;
+  padding: 0 2rem;
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 2rem;
   align-items: flex-start;
 }
-.location i{
-  font-size: 22px;
+
+.location i {
+  font-size: 1.5rem;
   margin: 4px 5px 0 0;
 }
-.weather-part .bottom-details{
+
+.weather-part .bottom-details {
   display: flex;
   width: 100%;
   justify-content: space-between;
   border-top: 1px solid #ccc;
 }
-.bottom-details .column{
+
+.bottom-details .column {
   display: flex;
   width: 100%;
-  padding: 15px 0;
+  padding: 1rem 0;
   align-items: center;
   justify-content: center;
 }
-.column i{
-  color: #5DBBFF;
-  font-size: 40px;
+
+.column i {
+  color: #5dbbff;
+  font-size: 2rem;
 }
-.column.humidity{
+
+.column.humidity {
   border-left: 1px solid #ccc;
 }
-.column .details{
-  margin-left: 3px;
+
+.column .details {
+  margin-left: 0.5rem;
 }
-.details .temp, .humidity span{
-  font-size: 18px;
+
+.details .temp, .humidity span {
+  font-size: 1rem;
   font-weight: 500;
   margin-top: -3px;
 }
-.details .temp .deg{
+
+.details .temp .deg {
   margin: 0;
-  font-size: 17px;
+  font-size: 1rem;
   padding: 0 2px 0 1px;
 }
-.column .details p{
-  font-size: 14px;
+
+.column .details p {
+  font-size: 0.875rem;
   margin-top: -6px;
 }
-.humidity i{
-  font-size: 37px;
+
+.humidity i {
+  font-size: 1.5rem;
 }
