--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,9 +23,9 @@
 
 
     <header class="site-header">
-      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top navbar-weather">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/">Weather App</a>
+          <a class="navbar-brand mr-4" href="/">Simply Weather</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -39,6 +39,7 @@
         </div>
       </nav>
     </header>
+
 
     <div class="container">
       {% with messages = get_flashed_messages(with_categories=true) %}
