--- a/static/main.css
+++ b/static/main.css
@@ -10,12 +10,14 @@ h1, h2, h3, h4, h5, h6 {
 img {
   padding: 5% 5%;
 }
-
+.alert {
+  margin-top: 10%;
+}
 .center {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 80%;
 }
 
 .bg-steel {
@@ -74,7 +76,6 @@ img {
   border: 1px solid #dddddd;
   border-radius: 3px;
   margin-bottom: 20px;
-  margin-top: 20%;
 }
 
 .article-title {
