--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -1,26 +1,31 @@
 {% extends "layout.html" %} <!-- Inherits the basic layout from layout.html -->
 {% block content %}
 
-  <div class="wrapper center">
-    <section class="input-part">
-      <header>Enter info:</header>
-      <p class="info-txt"></p>
-      <div class="content">
-        <form action="/recommend" method="post"> <!-- Add the form here -->
-          <input type="text" name="state" spellcheck="false" placeholder="Enter state name" required>
-          <br>
-          <input type="text" name="temperature" spellcheck="false" placeholder="Enter desired temperature" required>
-          <br>
-          <button type="submit">Submit</button>
-        </form>
+<div class="wrapper center">
+  <section class="input-part">
+    <header>Enter info:</header>
+    <p class="info-txt"></p>
+    <div class="content">
+      <form action="/recommend" method="post"> <!-- Add the form here -->
+        <input type="text" name="state" spellcheck="false" placeholder="Enter state name" required>
+        <br>
+        <input type="text" name="temperature" spellcheck="false" placeholder="Enter desired temperature" required>
+        <br>
+        <button type="submit">Submit</button>
+      </form>
 
-        <div class="separator"></div>
-        <button>Get Location Automatically</button>
+      <div class="separator"></div>
+      <button>Get Location Automatically</button>
+      
+      <!-- Display city and temperature -->
+      {% if city and temperature %}
+        <div class="result">
+          <p>The city with the closest temperature to {{ temperature }} is {{ city }}.</p>
+        </div>
+      {% endif %}
+    </div>
+  </section>
 
-      </div>
-    </section>
 
-    <!-- Rest of the HTML code is the same -->
-    <!-- .... -->
 
 {% endblock content %}
