--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,7 +32,7 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="/">Home</a>
-              <a class="nav-item nav-link" href="/recommend">Elias Lingo</a>
+              <a class="nav-item nav-link" href="/recommend">recommend</a>
               <a class="nav-item nav-link" href="/register">Register</a>
               <a class="nav-item nav-link" href="/login">Log In</a>
             </div>
