--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -19,7 +19,7 @@
       
       <!-- Display city and temperature -->
       {% if message %}
-        <div class="result">
+        <div class="result" style="text-align: center;">
           <p>{{ message }}</p>
         </div>
       {% endif %}
