--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -8,33 +8,36 @@
     <div class="content">
       <form action="/recommend" method="post"> <!-- Add the form here -->
         <input type="text" id="state" name="state" spellcheck="false" placeholder="Enter state name" required>
-        <button type="button" onclick="getState()">Get State Automatically</button>
         <br>
         <input type="text" name="temperature" spellcheck="false" placeholder="Enter desired temperature" required>
         <br>
         <button type="submit">Submit</button>
       </form>
 
-      <script>
-        function getState() {
-          if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(showPosition);
-          } else { 
-            alert("Geolocation is not supported by this browser.");
-          }
-        }
+      <div class="separator"></div>
+    
+      <button type="button" onclick="getState()">Get State Automatically</button>
 
-        function showPosition(position) {
-          var lat = position.coords.latitude;
-          var lon = position.coords.longitude;
+<script>
+function getState() {
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showPosition);
+    } else { 
+        alert("Geolocation is not supported by this browser.");
+    }
+}
 
-          fetch(`/geocode?lat=${lat}&lon=${lon}`)
-          .then(response => response.json())
-          .then(data => {
-            document.getElementById('state').value = data.state;
-          });
-        }
-      </script>
+function showPosition(position) {
+    var lat = position.coords.latitude;
+    var lon = position.coords.longitude;
+
+    fetch(`/geocode?lat=${lat}&lon=${lon}`)
+    .then(response => response.json())
+    .then(data => {
+        document.getElementById('state').value = data.state;
+    });
+}
+</script>
 
       <!-- Display city and temperature -->
       {% if message %}
