--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
 
       <fieldset class="form-group"> - adds more CSS styling
     -->
-
+  <h1>Register</h1>
   <div class="content-section">
     <form method="POST" action="">
       {{ form.hidden_tag() }}
