--- a/static/main.css
+++ b/static/main.css
@@ -3,9 +3,24 @@ body {
   color: #333333;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 {
   color: #444444;
 }
+
+h1 {
+  --s: 0.1em;   /* the thickness of the line */
+  --c: #2c4bff; /* the color */
+  
+  color: #0000;
+  padding-bottom: var(--s);
+  background: 
+    linear-gradient(90deg,var(--c) 50%,#000 0) calc(100% - var(--_p,0%))/200% 100%,
+    linear-gradient(var(--c) 0 0) 0% 100%/var(--_p,0%) var(--s) no-repeat;
+  -webkit-background-clip: text,padding-box;
+          background-clip: text,padding-box;
+  transition: 0.5s;
+}
+h1:hover {--_p: 100%}
 
 img {
   padding: 5% 5%;
@@ -17,7 +32,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 80%;
+  /* width: 80%; */
 }
 
 .bg-steel {
@@ -69,11 +84,14 @@ img {
   color: #cbd5db;
 }
 
+.container {
+  width: 70%;
+}
 .content-section {
   background: #ffffff;
   padding: 10px 20px;
   border: 1px solid #dddddd;
-  border-radius: 3px;
+  border-radius: 50px;
   margin-bottom: 20px;
 }
 
@@ -123,3 +141,4 @@ a.article-title:hover {
 .account-heading {
   font-size: 2.5rem;
 }
+
