--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %} <!-- Inherits the basic layout from layout.html -->
 {% block content %}
-  
+  <h1>Login</h1>
   <div class="content-section">
     <form method="POST" action="">
       {{ form.hidden_tag() }}
