--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -1,102 +1,83 @@
-{% extends "layout.html" %} <!-- Inherits the basic layout from layout.html -->
-{% block content %}
-
-
-  <div class="wrapper center">
-    
+{% extends "layout.html" %}
+<!-- Inherits the basic layout from layout.html --> {% block content %} 
+<div class="wrapper center">
     <section class="input-part">
-      <header>Get Your Weather:</header>
-      <p class="info-txt"></p>
-      <div class="content">
-        <br>
-        <input type="text" spellcheck="false" placeholder="Enter city name" required>
-        <br>
-        <div class="custom-select">
-            <select id="degree_sel" required>
-                <option value="" selected disabled>Select Temperature Unit</option>
-                <option value="freg">Fahrenheit</option>
-                <option value="cel">Celsius</option>
-            </select>
-        </div>
-
-        <div class="separator"></div>
-        <button>Get Location Automatically</button>
-
-      </div>
-    </section>
-
-    <section class="weather-part">
-      <header>
-        <i class='bx bx-left-arrow-alt' id="showWeatherBtn"></i> <!-- Add the id here -->
-        Go Back
-      </header>
-
-      <img src="" alt="Weather Icon">
-
-      <div class="temp">
-        <span class="numb">_</span>
-        <span class="deg">_</span>
-      </div>
-
-      <div class="weather">_ _</div>
-
-      <div class="location">
-        <i class='bx bx-map'></i>
-        <span>_, _</span>
-      </div>
-
-      <div class="bottom-details">
-        <div class="column feels">
-          <i class='bx bxs-thermometer'></i>
-          <div class="details">
-
-            <div class="temp">
-              <span class="numb-2">_</span>
-              <span class="deg-2">_</span>
+        <header>Get Your Weather:</header>
+        <p class="info-txt"></p>
+        <div class="content">
+            <br>
+            <input type="text" spellcheck="false" placeholder="Enter city name" required>
+            <br>
+            <div class="custom-select">
+                <select id="degree_sel" required>
+                    <option value="" selected disabled>Select Temperature Unit</option>
+                    <option value="freg">Fahrenheit</option>
+                    <option value="cel">Celsius</option>
+                </select>
             </div>
-
-            <p>Feels like</p>
-          </div>
+            <div class="separator"></div>
+            <button>Get Location Automatically</button>
         </div>
-
-        <div class="column humidity">
-          <i class='bx bxs-droplet-half'></i>
-          <div class="details">
-            <span>_</span>
-            <p>Humidity</p>
-          </div>
-        </div>
-
-      </div>
-
-      <button id="showFunFactBtn">Generate Fun Fact?</button>
-      <button id="showWearBtn">What to wear?</button>
-
     </section>
-
+    <section class="weather-part">
+        <header>
+            <i class='bx bx-left-arrow-alt' id="showWeatherBtn"></i> <!-- Add the id here --> Go Back
+        </header>
+        <img src="" alt="Weather Icon">
+        <div class="temp">
+            <span class="numb">_</span>
+            <span class="deg">_</span>
+        </div>
+        <div class="weather">_ _</div>
+        <div class="location">
+            <i class='bx bx-map'></i>
+            <span>_, _</span>
+        </div>
+        <div class="bottom-details">
+            <div class="column feels">
+                <i class='bx bxs-thermometer'></i>
+                <div class="details">
+                    <div class="temp">
+                        <span class="numb-2">_</span>
+                        <span class="deg-2">_</span>
+                    </div>
+                    <p>Feels like</p>
+                </div>
+            </div>
+            <div class="column humidity">
+                <i class='bx bxs-droplet-half'></i>
+                <div class="details">
+                    <span>_</span>
+                    <p>Humidity</p>
+                </div>
+            </div>
+        </div>
+        <button id="showFunFactBtn">Generate Fun Fact?</button>
+        <button id="showWearBtn">What to wear?</button>
+    </section>
     <section class="funfact-part">
-      <header>Fun Fact:</header>
-      <p class="fun-fact-info"></p>
+        <header>Fun Fact:</header>
+        <p class="fun-fact-info"></p>
     </section>
-
     <section class="showWear-part">
-      <header>We recommend you wear:</header>
-      <p class="wear-info"></p>
+        <header>We recommend {{user[1]}} wear:</header>
+        <p class="wear-info"></p>
     </section>
-
-
-  </div>
-    
-<script> 
+</div>
+<h1> User: {{user[1]}} </h1>
+<aside class="sidebar">
+    <h3>Previous Searches:</h3>
+    <ul class="weather-info-list"></ul>
+</aside>
+<script>
     const wrapper = document.querySelector(".wrapper"),
-    inputPart = document.querySelector(".input-part"),
-    infoTxt = inputPart.querySelector(".info-txt"),
-    inputField = inputPart.querySelector("input"),
-    locationBtn = inputPart.querySelector("button"),
-    weatherPart = wrapper.querySelector(".weather-part"),
-    wIcon = weatherPart.querySelector("img"),
-    arrowBack = wrapper.querySelector("header i");
-
+        inputPart = document.querySelector(".input-part"),
+        infoTxt = inputPart.querySelector(".info-txt"),
+        inputField = inputPart.querySelector("input"),
+        locationBtn = inputPart.querySelector("button"),
+        weatherPart = wrapper.querySelector(".weather-part"),
+        wIcon = weatherPart.querySelector("img"),
+        arrowBack = wrapper.querySelector("header i");
     const funFacts = {
         "thunderstorm with light rain": "Did you know that lightning during a thunderstorm can heat the surrounding air up to 30,000 degrees Celsius?",
         "thunderstorm with rain": "A typical thunderstorm releases enough energy to power a large city for several days.",
@@ -154,8 +135,6 @@
         "broken clouds": "Broken clouds are characterized by large, irregular cloud patches in the sky.",
         "overcast clouds": "Overcast skies can create a gloomy atmosphere but also serve as a natural diffuser for sunlight, creating soft lighting conditions."
     }
-
-
     const clothingRecommendations = {
         "thunderstorm with light rain": "A light waterproof jacket or raincoat, and waterproof shoes. Carry an umbrella for added protection.",
         "thunderstorm with rain": "A waterproof jacket or raincoat, and waterproof shoes. Don't forget to bring an umbrella.",
@@ -213,97 +192,115 @@
         "broken clouds": "Light and breathable clothing suitable for the temperature.",
         "overcast clouds": "A light jacket or layered clothing to adjust to changing temperatures.",
     }
-
-    
     const funFactContainer = document.querySelector(".funfact-part");
     const funFactInfo = funFactContainer.querySelector(".fun-fact-info");
-
     const wearPartContainer = document.querySelector(".showWear-part");
     const wearInfo = wearPartContainer.querySelector(".wear-info");
-
-    temp_deg_i = 0; 
-
-
+    temp_deg_i = 0;
     let api;
-
-    inputField.addEventListener("keyup", e =>{
-        if(e.key == "Enter" && inputField.value != ""){
+    inputField.addEventListener("keyup", e => {
+        if(e.key == "Enter" && inputField.value != "") {
             requestApi(inputField.value);
         }
     });
-
-
-    locationBtn.addEventListener("click", () =>{
-      if(navigator.geolocation){
-          navigator.geolocation.getCurrentPosition(onSuccess, onError);
-      }else{
-          alert("Sorry, your browser does not allow geolocation api.");
-      }
+    locationBtn.addEventListener("click", () => {
+        if(navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(onSuccess, onError);
+        } else {
+            alert("Sorry, your browser does not allow geolocation api.");
+        }
     });
 
-    function requestApi(city){
+    function requestApi(city) {
         api = `https://api.openweathermap.org/data/2.5/weather?q=${city}&units=imperial&appid=12d7632e8289198b000b09b0ec1e303e`;
         fetchData();
     }
 
-    function onSuccess(position){
-        const {latitude, longitude} = position.coords;
+    function onSuccess(position) {
+        const {
+            latitude,
+            longitude
+        } = position.coords;
         api = `https://api.openweathermap.org/data/2.5/weather?lat=${latitude}&lon=${longitude}&units=imperial&appid=12d7632e8289198b000b09b0ec1e303e`;
         fetchData();
     }
 
-    function onError(error){
+    function onError(error) {
         infoTxt.innerText = error.message;
         infoTxt.classList.add("error");
     }
 
-    function fetchData(){
+    function fetchData() {
         infoTxt.innerText = "Getting weather details...";
         infoTxt.classList.add("pending");
-        fetch(api).then(res => res.json()).then(result => weatherDetails(result)).catch(() =>{
+        fetch(api).then(res => res.json()).then(result => weatherDetails(result)).catch(() => {
             infoTxt.innerText = "Something went wrong";
             infoTxt.classList.replace("pending", "error");
         });
     }
 
+    // Function to update the sidebar with weather information
+    function updateSidebar(city, temperature, unit) {
+    const weatherInfoList = document.querySelector(".weather-info-list");
 
-    function weatherDetails(info){
-        if(info.cod == "404"){
+    // Create a new list item to display the weather information
+    const listItem = document.createElement("li");
+    listItem.innerText = `${city}: ${temperature}°${unit} - ${getCurrentTime()}`;
+
+    // Add the new list item to the sidebar
+    weatherInfoList.appendChild(listItem);
+    }
+
+    // Function to get the current time in the format "HH:mm"
+    function getCurrentTime() {
+    const now = new Date();
+    const hours = now.getHours().toString().padStart(2, "0");
+    const minutes = now.getMinutes().toString().padStart(2, "0");
+    return `${hours}:${minutes}`;
+    }
+
+    function weatherDetails(info) {
+        if(info.cod == "404") {
             infoTxt.classList.replace("pending", "error");
             infoTxt.innerText = `${inputField.value} isn't a valid city name`;
-        }else{
-
+        } else {
             const city = info.name;
             const country = info.sys.country;
-            const {description, id} = info.weather[0];
-            const {temp, feels_like, humidity} = info.main;
-            
-            if(id == 800){
+            const {
+                description,
+                id
+            } = info.weather[0];
+            const {
+                temp,
+                feels_like,
+                humidity
+            } = info.main;
+            if(id == 800) {
                 wIcon.src = "https://github.com/paolacalle/weatherapp/assets/98432607/f5980f75-20b4-4302-a042-af674f7b3313";
-            }else if(id >= 200 && id <= 232){
-                wIcon.src = "https://github.com/paolacalle/weatherapp/assets/98432607/c5393283-c50c-44e8-b29b-afdb5b8632ad";  
-            }else if(id >= 600 && id <= 622){
+            } else if(id >= 200 && id <= 232) {
+                wIcon.src = "https://github.com/paolacalle/weatherapp/assets/98432607/c5393283-c50c-44e8-b29b-afdb5b8632ad";
+            } else if(id >= 600 && id <= 622) {
                 wIcon.src = "https://github.com/paolacalle/weatherapp/assets/98432607/334fbf9b-94cd-4312-9de5-2bdda79bad36";
-            }else if(id >= 701 && id <= 781){
+            } else if(id >= 701 && id <= 781) {
                 wIcon.src = "https://github.com/paolacalle/weatherapp/assets/98432607/f954321e-5f83-41a3-9f99-4e6a559298de";
-            }else if(id >= 801 && id <= 804){
+            } else if(id >= 801 && id <= 804) {
                 wIcon.src = "https://github.com/paolacalle/weatherapp/assets/98432607/08da106b-a4bf-4068-a2b3-65c5bcd2eb32";
-            }else if((id >= 500 && id <= 531) || (id >= 300 && id <= 321)){
+            } else if((id >= 500 && id <= 531) || (id >= 300 && id <= 321)) {
                 wIcon.src = "https://github.com/paolacalle/weatherapp/assets/98432607/c7f94464-dca3-4a26-b60a-910928f40bf2";
             }
-            
-            if(document.querySelector("#degree_sel").selectedIndex == 2){
-              weatherPart.querySelector(".temp .numb").innerText = Math.floor((5/9)*(temp - 32));
-              weatherPart.querySelector(".temp .numb-2").innerText = Math.floor((5/9)*(feels_like - 32));
-              weatherPart.querySelector(".temp .deg").innerText = "°C";
-              weatherPart.querySelector(".temp .deg-2").innerText = "°C";
-            } else{
-              weatherPart.querySelector(".temp .numb").innerText = Math.floor(temp);
-              weatherPart.querySelector(".temp .numb-2").innerText = Math.floor(feels_like);
-              weatherPart.querySelector(".temp .deg").innerText = "°F";
-              weatherPart.querySelector(".temp .deg-2").innerText = "°F";
+            if(document.querySelector("#degree_sel").selectedIndex == 2) {
+                weatherPart.querySelector(".temp .numb").innerText = Math.floor((5 / 9) * (temp - 32));
+                weatherPart.querySelector(".temp .numb-2").innerText = Math.floor((5 / 9) * (feels_like - 32));
+                weatherPart.querySelector(".temp .deg").innerText = "°C";
+                weatherPart.querySelector(".temp .deg-2").innerText = "°C";
+                updateSidebar(city, Math.floor((5 / 9) * (temp - 32)), "C");
+            } else {
+                weatherPart.querySelector(".temp .numb").innerText = Math.floor(temp);
+                weatherPart.querySelector(".temp .numb-2").innerText = Math.floor(feels_like);
+                weatherPart.querySelector(".temp .deg").innerText = "°F";
+                weatherPart.querySelector(".temp .deg-2").innerText = "°F";
+                updateSidebar(city, Math.floor(temp), "F");
             }
-
             weatherPart.querySelector(".weather").innerText = description;
             weatherPart.querySelector(".location span").innerText = `${city}, ${country}`;
             weatherPart.querySelector(".humidity span").innerText = `${humidity}%`;
@@ -313,42 +310,29 @@
             wrapper.classList.add("active");
         }
     }
-
-    
-
     document.getElementById("showFunFactBtn").addEventListener("click", () => {
-      const weatherCondition = weatherPart.querySelector(".weather").innerText;
-      const fun_recommendation = funFacts[weatherCondition];
-      
-      if (fun_recommendation) {
-        funFactInfo.innerText = fun_recommendation;
-      } else {
-        funFactInfo.innerText = "No specific recommendation available.";
-      }
-
-      funFactContainer.style.display = "block";
+        const weatherCondition = weatherPart.querySelector(".weather").innerText;
+        const fun_recommendation = funFacts[weatherCondition];
+        if(fun_recommendation) {
+            funFactInfo.innerText = fun_recommendation;
+        } else {
+            funFactInfo.innerText = "No specific recommendation available.";
+        }
+        funFactContainer.style.display = "block";
     });
-
     document.getElementById("showWearBtn").addEventListener("click", () => {
-      const weatherCondition = weatherPart.querySelector(".weather").innerText;
-      const c_recommendation = clothingRecommendations[weatherCondition];
-
-      if (c_recommendation) {
-        wearInfo.innerText = c_recommendation;
-      } else {
-        wearInfo.innerText = "No specific recommendation available.";
-      }
-
-      wearPartContainer.style.display = "block";
+        const weatherCondition = weatherPart.querySelector(".weather").innerText;
+        const c_recommendation = clothingRecommendations[weatherCondition];
+        if(c_recommendation) {
+            wearInfo.innerText = c_recommendation;
+        } else {
+            wearInfo.innerText = "No specific recommendation available.";
+        }
+        wearPartContainer.style.display = "block";
     });
-
-    arrowBack.addEventListener("click", ()=>{
-      funFactContainer.style.display = "none";
-      wearPartContainer.style.display = "none";
-      wrapper.classList.remove("active");
+    arrowBack.addEventListener("click", () => {
+        funFactContainer.style.display = "none";
+        wearPartContainer.style.display = "none";
+        wrapper.classList.remove("active");
     });
-
-</script>
-
-
-{% endblock content %}
+</script> {% endblock content %}
